Upgrade Micronaut 1.1.0.M2 --> 1.1.0.RC1
I compared two blank projects and applied the differences to the
matching files in this project.

    mkdir micronaut1.1.0.M2
    sdk use micronaut 1.1.0.M2
    (cd micronaut1.1.0.M2; mn create-app blank --lang groovy --features mongo-gorm)

    mkdir micronaut1.1.0.RC1
    sdk use micronaut 1.1.0.RC1
    (cd micronaut1.1.0.RC1; mn create-app blank --lang groovy --features mongo-gorm)

    diff -r micronaut1.1.0.M2/blank micronaut1.1.0.RC1/blank